# amr_gesture_ws

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md
cloud/video_llava_service/: app.py  inference.py
configs/: policy.yaml  topics.yaml
data/repo/profiles/base/: gestures.json  mappings.json
data/repo/schema/: gestures.schema.json  mappings.schema.json
data/sim_models/: standalone_camera.sdf
src/amr_interfaces/: CMakeLists.txt  package.xml
src/amr_interfaces/msg/: Diagnostics.msg  Gesture.msg  Intent.msg  Keypoints.msg
src/amr_interfaces/resource/: amr_interfaces
src/amr_interfaces/srv/: ReloadRepo.srv  SaveMapping.srv  SwitchProfile.srv  UpsertGesture.srv
src/amr_sim_pkg/: CMakeLists.txt  package.xml
src/amr_sim_pkg/launch/: amr_lab.launch.py
src/amr_sim_pkg/worlds/: amr_lab.world
src/arbiter_pkg/: package.xml  setup.cfg  setup.py
src/context_bus_pkg/: package.xml  setup.cfg  setup.py
src/gesture_classifiers_pkg/: package.xml  setup.cfg  setup.py
src/led_manager_pkg/: package.xml  setup.cfg  setup.py
src/perception_pkg/: package.xml  setup.py
src/perception_pkg/launch/: perception.launch.py
src/perception_pkg/perception_pkg/: perception_node.py
src/repo_manager_pkg/: package.xml  setup.cfg  setup.py
src/repo_manager_pkg/repo_manager_pkg/: repo_manager_node.py
src/repo_manager_pkg/resource/: repo_manager_pkg
src/trainer_ui_pkg/: package.xml  setup.cfg  setup.py
