<?xml version="1.0"?>
<package format="3">
  <name>amr_interfaces</name>
  <version>0.0.1</version>
  <description>Common messages, services, and actions for AMR gesture/VLM project</description>

  <maintainer email="sayak.deb26@gmail.com">sayakdeb26</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
