<?xml version="1.0"?>
<package format="3">
  <name>amr_sim_pkg</name>
  <version>0.0.1</version>
  <description>Gazebo world &amp; launch for AMR gesture testing.</description>
  <maintainer email="sayak.deb26@gmail.com">Sayak</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
