<?xml version="1.0"?>
<package format="3">
  <name>perception_pkg</name>
  <version>0.0.1</version>
  <description>Perception node that calls the local VLM HTTP service and publishes amr_interfaces/Intent.</description>
  <maintainer email="sayak.deb26@gmail.com">Sayak</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>amr_interfaces</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
